@@ -12,6 +12,7 @@ extern void clear_factors(int nfactors, mpz_t* pfactors[], int* pexponents[]);
 extern void sigma(mpz_t res, mpz_t n, UV k);
 extern int moebius(mpz_t n);
 extern int liouville(mpz_t n);
+extern int is_semiprime(mpz_t n);
 extern void totient(mpz_t totient, mpz_t n);
 extern void jordan_totient(mpz_t tot, mpz_t n, unsigned long k);
 extern void carmichael_lambda(mpz_t lambda, mpz_t n);
