@@ -10,6 +10,7 @@ Revision history for Perl module Math::Prime::Util::GMP
     - random_ndigit_prime(ndigs)   random prob prime of exactly ndigs digits
     - seed_csprng(bytes,data)      supply a seed to the internal CSPRNG
     - is_csprng_well_seeded()      returns 1 if the CSPRNG has a proper seed
+    - is_semiprime(n)              does n have exactly two prime factors
 
     [FIXES]
 
